--- a/src/components/Sidebar/Sidebar.css
+++ b/src/components/Sidebar/Sidebar.css
@@ -1,7 +1,5 @@
 .dashboard-sidebar {
     width: 233px;
-    /* background-color: #242D35; */
-    /* background: var(--primary-blue-active); */
     background: #3843FF;
     height: 100vh;
     position: fixed;
@@ -19,16 +17,14 @@
 
 .sidebar-menu .logo {
     margin-bottom: 34px;
-    text-align: left;
     color: #fff;
     display: flex;
     justify-content: flex-start;
     align-items: center;
 }
 
-.sidebar-menu .logo a{
+.sidebar-menu .logo a {
     display: flex;
-    justify-content: center;
     align-items: center;
     gap: 4px;
     color: #fff;
@@ -40,6 +36,7 @@
 .sidebar-menu ul {
     list-style-type: none;
     padding: 0;
+    margin: 0;
 }
 
 .sidebar-menu ul li {
@@ -55,19 +52,16 @@
     font-weight: 500;
     padding: 10px 15px;
     border-radius: 5px;
-    transition: background-color 0.3s ease;
+    transition: background-color 0.3s ease, color 0.3s ease;
 }
 
 .sidebar-menu ul li a:hover {
-    /* background-color: rgba(56, 67, 255, 0.1); */
-    /* color: var(--primary-blue-100); */
     border-left: 4px solid #FFFFFF;
     background-color: #2F3ABD;
     color: #fff;
 }
 
 .sidebar-menu ul li a.active-link {
-    /* background-color: var(--primary-blue-100); */
     color: white;
     border-left: 4px solid #fff;
     background-color: #2F3ABD;
@@ -76,3 +70,4 @@
 .sidebar-menu ul li a svg {
     margin-right: 10px;
 }
+
