--- a/src/pages/styles/Home.css
+++ b/src/pages/styles/Home.css
@@ -706,7 +706,7 @@ section.key-features {
     gap: 10px;
 }
 
-.social-icons .icon {
+.social-icons .icon, .social-icons .icon a {
     background: var(--primary-blue-100);
     color: #fff;
     width: 35px;
@@ -718,9 +718,10 @@ section.key-features {
     font-size: 1rem;
     cursor: pointer;
     transition: all 0.3s ease;
+    text-decoration: none;
 }
 
-.social-icons .icon:hover {
+.social-icons .icon:hover, .social-icons .icon a:hover {
     background: #fff;
     color: #3843FF;
     transform: scale(1.1);
